@@ -1,0 +1,18 @@
+<samba:parameter name="ldap ssl ads"
+                 context="G"
+                 type="boolean"
+		 deprecated="1"
+                 xmlns:samba="http://www.samba.org/samba/DTD/samba-doc">
+<description>
+	<para>This option is used to define whether or not Samba should
+	use SSL when connecting to the ldap server using
+	<emphasis>ads</emphasis> methods.
+	Rpc methods are not affected by this parameter.
+	</para>
+
+	<para>See also <smbconfoption name="ldap ssl"/>.
+	</para>
+
+</description>
+<value type="default">no</value>
+</samba:parameter>
